deployments/helm/platforms/atlantis/authz.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-x-manabie-auth
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer: "https://securetoken.google.com/staging-manabie-online"
    jwksUri: "https://www.googleapis.com/service_accounts/v1/jwk/securetoken@system.gserviceaccount.com"
    fromHeaders:
    - name: x-manabie-auth
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: atlantis-host
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals: ["*"]
    to:
    - operation:
        hosts: ["atlantis.manabie.io"]
        notPaths:
          - "/events*"
          - "/.well-known*"
